# Graphic-Simulator

./: .gitignore  CMakeLists.txt  README.md
app_resources/web/: index_shell.html
assets/: imgui_starter.ini
assets/D01HelloQuad/: 01_hello_quad.frag  01_hello_quad.vert
assets/D03Fog/: exponential_fog.frag  exponential_fog.vert  fragcoordz_fog.frag  fragcoordz_fog.vert  linear_fog.frag  linear_fog.vert
assets/D04ToonShading/: 01_custom_range_toon.frag  02_uniform_range_toon.frag  03_gradient_texture_toon.frag  toon.vert
assets/D05ShadowMapping/: fill_3d.frag  fill_3d.vert  shadows.frag  shadows.vert  view_depth.frag  view_depth.vert  write_depth.frag
assets/D06GeometryShaders/: default.geom  extrude.frag  extrude.geom  fill_3d.frag  fill_3d.vert  fun.geom  normals.geom  shrink.frag  shrink.geom  texture_3d.frag  texture_3d.vert  wireframe.geom
assets/D07TessellationShaders/: fill_3d.frag  params.vert  params_line.tesc  params_line_spacing_equal.tese  params_line_spacing_even.tese  params_line_spacing_odd.tese  params_quad.tesc  params_quad_spacing_equal.tese  params_quad_spacing_even.tese  params_quad_spacing_odd.tese  params_tri.tesc  params_tri_spacing_equal.tese  params_tri_spacing_even.tese  params_tri_spacing_odd.tese  points.geom  wireframe.geom
assets/D08ComputeShaders/: circle_color_pulse.comp  fun.comp  luminance.comp  simple.comp  simple.frag  simple.vert
assets/D09ValueNoise/: simple.frag  simple.vert
assets/D10GradientNoise/: gen_gradient_noise.frag  gen_gradient_noise.vert  simple.frag  simple.vert  surface.vert
assets/D11CurvesNSplines/: curve.frag  curve.vert  fill_3d.vert  texture_3d.vert
assets/D11CurvesNSplines/RizomUV_UVGrids/: source.txt
cmake/: Dependencies.cmake
cmake/dependencies/: DearImGUI.cmake  GLEW.cmake  GLM.cmake  OpenGL.cmake  SDL2.cmake  STB.cmake
docs/: Rubric.md
source/: CMakeLists.txt  main.cpp
source/assets/: Path.cpp  Path.hpp  Reloader.cpp  Reloader.hpp
source/demos/: D01HelloQuad.cpp  D01HelloQuad.hpp  D02ProceduralMeshes.cpp  D02ProceduralMeshes.hpp  D03Fog.cpp  D03Fog.hpp  D04ToonShading.cpp  D04ToonShading.hpp  D05ShadowMapping.cpp  D05ShadowMapping.hpp  D06GeometryShaders.cpp  D06GeometryShaders.hpp  D07TessellationShaders.cpp  D07TessellationShaders.hpp  D08ComputeShaders.cpp  D08ComputeShaders.hpp  D09ValueNoise.cpp  D09ValueNoise.hpp  D10GradientNoise.cpp  D10GradientNoise.hpp  D11CurvesNSplines.cpp  D11CurvesNSplines.hpp  D12IntegratedDemo.cpp  D12IntegratedDemo.hpp  DemosFactory.cpp  DemosFactory.hpp  IDemo.hpp
source/environment/: Environment.hpp  Input.hpp  OpenGL.hpp
source/graphics/: Camera.hpp  Material.cpp  Material.hpp  MathHelper.hpp  Mesh.cpp  Mesh.hpp
source/graphics/curve/: CurveGeneration.cpp  CurveGeneration.hpp
source/graphics/noise/: PeriodDimension.hpp  ValueNoise.hpp
source/opengl/: GL.cpp  GL.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLHandle.hpp  GLIndexBuffer.cpp  GLIndexBuffer.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GLVertexArray.cpp  GLVertexArray.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp
source/util/: FPS.hpp  JobSystem.cpp  JobSystem.hpp  Random.cpp  Random.hpp  Timer.hpp  WatchFiles.cpp  WatchFiles.hpp
source/window/: Application.cpp  Application.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  Logo.cpp  Logo.hpp  Settings.cpp  Settings.hpp
